# django-blog

./: README.md  db.sqlite3  pyproject.toml
hexlet_django_blog/: .env  settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: create.html  delete.html  errors.html  index.html  show.html  update.html
templates/: base.html  index.html
